# annotator

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  dev.md
.github/workflows/: release.yml  test.yml
alignment/: alignment.rs  bin.rs  template.rs
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/src/: custom_modifications.rs  html_builder.rs  identified_peptides.rs  main.rs  metadata_render.rs  model.rs  psm_file.rs  raw_data.rs  raw_file.rs  search_modification.rs  spectra.rs  state.rs  validate.rs
backend/src/render/: all.rs  classes.rs  label.rs  mod.rs  peptide.rs  table.rs
documentation/: Examples.mzML  PSM_files.typ  annotate.typ  bib.bib  exporting.typ  functions.typ  identified_peptide_files.typ  identified_peptidoform_files.typ  installing.typ  main.typ  ontologies.typ  rawfiles.typ  spectrum.typ  tools.typ
frontend/: index.html  main.js  open.js  script.js  style.css  styles.css
src/: basic.js  index.html  main.js  stitch-script.js  stitch-styles.css  style.css
src-proc-interface/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/alignment/: output.html  readme.md
src-tauri/alignment/src/: alignment.rs  alphabet.rs  aminoacid.rs  bin.rs  lib.rs  template.rs
src-tauri/icons/: icon.icns
src-tauri/src/: custom_modifications.rs  html_builder.rs  identified_peptides.rs  main.rs  metadata_render.rs  render.rs  search.rs  search_modification.rs  spectra.rs  state.rs
src-tauri/src/render/: all.rs  classes.rs  label.rs  mod.rs
