[workspace]
members = [
    "backend",
]
resolver = "2"

[patch.crates-io]
# hdf5 rust crate needs a new version
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust.git" }
#rustyms = {path = "../mzcore/rustyms"}
rustyms = {git = "https://github.com/rusteomics/mzcore"}

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1