[workspace]
members = ["backend"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
context_error = "0.2"
itertools = "0.14"
mzalign = { version = "0.1.1", features = ["rayon"] }
mzannotate = { version = "0.1.0" }
mzcore = { version = "0.1.1", default-features = false, features = ["isotopes", "glycan-render"] }
mzcv = { version = "0.2.0", features = ["search-index", "http"] }
mzident = { version = "0.1.0", features = ["mzannotate"] }
ordered-float = { version = "5.0", features = ["serde"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["protocol-asset"] }
mzdata = { version="0.63", default-features = false, features = [
    "mzsignal",
    "proxi-async",
    "thermo",
    "miniz_oxide",
    "mgf",
    "mzml",
    "bruker_tdf",
] }
mzpeaks = "1.0"
mzsignal = "1.0"
tauri-plugin-dialog = "2"
thin-vec = { version = "0.2", features = ["serde"] }
tauri-plugin-opener = "2.4.0"
tokio = "1.48"

[patch.crates-io]
# hdf5 rust crate needs a new version
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust.git" }
# mzcore = { git="https://github.com/rusteomics/mzcore" }
# mzannotate = { git="https://github.com/rusteomics/mzcore" }
# mzident = { git="https://github.com/rusteomics/mzcore"}
# mzalign = { git="https://github.com/rusteomics/mzcore" }
mzcore =  { path = "../mzcore/mzcore" }
mzcv =  { path = "../mzcore/mzcv" }
mzannotate = { path = "../mzcore/mzannotate" }
mzident  = { path = "../mzcore/mzident" }
mzalign = { path = "../mzcore/mzalign" }
context_error = { git="https://github.com/douweschulte/context_error" }

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
