[package]
name = "annotator"
version = "1.0.0"
description = "Spectrum annotator"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/annotator"
edition = "2021"
rust-version = "1.82.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
tauri = { version = "2.0" }

[dependencies]
itertools = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset"] }
rustyms = { version = "0.9.0", default-features = false, features = [
    "identification",
    "align",
    "isotopes",
    "mzdata",
] }
ordered-float = { version = "4.5", features = ["serde"] }
rayon = "1.10"
mzdata = { version = "0.41", default-features = false, features = [
    "mzsignal",
    "proxi-async",
    "thermo",
    "zlib",
] }
mzpeaks = "1.0"
mzsignal = "1.0"
tauri-plugin-dialog = "2"
thin-vec = { version = "0.2", features = ["serde"] }

[patch.crates-io]
# hdf5 rust crate needs a new version
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust.git" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# To complile with mzmlb support, needs HDF5 installed on your system
mzmlb = ["mzdata/mzmlb"]
# Use static HDF5 libraries
hdf5-static = ["mzdata/hdf5_static"]

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
