[package]
name = "annotator"
version = "1.1.3"
description = "A simple tool to help you manually discover the depths of your (complex) spectra, one spectrum at a time. Load your rawfiles, select a spectrum and add your annotation with full control over theoretical fragments. Use the interactive spectrum to discover what your spectrum means and to export gorgeous images."
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/annotator"
edition = "2024"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
tauri = { version = "2.4" }

[dependencies]
itertools = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset"] }
rustyms = { version = "0.10.0", default-features = false, features = [
    "identification",
    "align",
    "isotopes",
    "mzdata",
    "glycan-render",
    "rayon",
] }
ordered-float = { version = "5.0", features = ["serde"] }
rayon = "1.10"
mzdata = { version = "0.54", default-features = false, features = [
    "mzsignal",
    "proxi-async",
    "thermo",
    "miniz_oxide",
    "mgf",
    "mzml",
    "bruker_tdf",
] }
mzpeaks = "1.0"
mzsignal = "1.0"
tauri-plugin-dialog = "2"
thin-vec = { version = "0.2", features = ["serde"] }
tauri-plugin-opener = "2.4.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# To complile with mzmlb support, needs HDF5 installed on your system
mzmlb = ["mzdata/mzmlb"]
# Use static HDF5 libraries
hdf5-static = ["mzdata/hdf5_static"]
