[package]
name = "annotator"
version = "1.3.0"
description = "A simple tool to help you manually discover the depths of your (complex) spectra, one spectrum at a time. Load your rawfiles, select a spectrum and add your annotation with full control over theoretical fragments. Use the interactive spectrum to discover what your spectrum means and to export gorgeous images."
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/annotator"
edition = "2024"
rust-version = "1.90.0"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
tauri = { version = "2.4" }

[dependencies]
chrono = {workspace = true}
clap = {workspace = true}
context_error = {workspace = true}
itertools = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
tauri = {workspace = true}
mzcore = {workspace = true}
mzcv = {workspace = true}
mzannotate = {workspace = true}
mzalign = {workspace = true}
mzident = {workspace = true}
ordered-float = {workspace = true}
rayon = {workspace = true}
mzdata = {workspace = true}
mzpeaks = {workspace = true}
mzsignal = {workspace = true}
tauri-plugin-dialog = {workspace = true}
thin-vec = {workspace = true}
tauri-plugin-opener = {workspace = true}
tokio = {workspace = true}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# To complile with mzmlb support, needs HDF5 installed on your system
mzmlb = ["mzdata/mzmlb"]
# Use static HDF5 libraries
hdf5-static = ["mzdata/hdf5_static"]
