[package]
name = "proc_interface"
version = "0.0.0"
description = "Generate a HTML interface for a tauri app based on a struct"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "proc_interface"
path = "src/lib.rs"
proc-macro = true

[dependencies]
#proc_macro = "0.10"


