[package]
name = "annotator"
version = "0.2.2"
description = "Spectrum annotator"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/annotator"
edition = "2021"
rust-version = "1.70.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tauri = { version = "1.6", features = ["dialog-open", "updater"] }

[dependencies]
itertools = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open", "dialog-open"] }
rustyms = { version = "0.8.3", default-features = false, features = [
    "identification",
    "align",
    "isotopes",
] }
ordered-float = { version = "4.2", features = ["serde"] }

[patch.crates-io]
# rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "main" }
rustyms = { path = "../../rustyms/rustyms" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
