[package]
name = "annotator"
version = "0.2.2"
description = "Spectrum annotator"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/annotator"
edition = "2021"
rust-version = "1.75.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
tauri = { version = "2.0" }

[dependencies]
itertools = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset"] }
rustyms = { version = "0.9.0-alpha.2", default-features = false, features = [
    "identification",
    "align",
    "isotopes",
    "mzdata",
] }
ordered-float = { version = "4.2", features = ["serde"] }
rayon = "1.10"
mzdata = { version = "0.32", features = ["thermo", "mzsignal"] }
mzpeaks = "0.22"
mzsignal = "0.25"
tauri-plugin-dialog = "2"

[patch.crates-io]
# rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "main" }
rustyms = { path = "../../rustyms/rustyms" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
